--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "country-state-city": "^3.2.1",
+    "pinia": "^2.1.7",
+    "v-tooltip": "^2.1.3",
+    "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +24,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "tailwindcss": "^3.3.3"
   },
   "eslintConfig": {
     "root": true,
